--- a/thefractalbot_web/static/style.css
+++ b/thefractalbot_web/static/style.css
@@ -325,6 +325,7 @@ form {
     width: 100%;
     border-radius: 1.5em;
     padding: 0.5em 1.5em;
+    margin-top: 2em;
     box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.8);
     /*box-shadow: 3px 3px 5px 3px rgba(0, 0, 0, 0.8),*/
     /*            -3px -3px 5px 3px rgba(255, 255, 255, 0.4);*/
